--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "releasessy",
   "version": "1.0.0",
-  "bin": "./index.js",
+  "bin": {
+    "releasessy": "./index.js"
+  },
   "license": "MIT",
   "dependencies": {
     "chalk": "^5.1.2",
